Update workspace and content

--- a/Symbiotic Revenue Model/0.1 Introduction.md
+++ b/Symbiotic Revenue Model/0.1 Introduction.md
@@ -1,14 +1,17 @@
-## Resources Used for Data Inputs
+# Historic Data 
+I have consolidated the data from the Historic Protocol Data and Hisotric Financial Statements in this file
+[Consolidated Historic Data](https://docs.google.com/spreadsheets/d/14EyPO2HMZ6WZD-Ia8ETsMK5i6LvKFYSe?rtpof=true&usp=drive_fs)
+## 1. Resources Used for Data Inputs
 ### a. Historic Financial Statements
 - [Q3 Financial Statements and Adjustments](https://drive.google.com/drive/folders/1hhaH-WtHp_qplQ16KgCjNb_WaYjchmmI)
 I have used an approximation for historic P&L data per month based on the provided statements.
-Next to that, I have corrected the monthly costs by the difference of the lower operating costs as indicated in the Cash Flow Statement and Profit & Loss Statement of the Supplier Cost Side.
+Next to that, I have corrected the monthly costs by the difference of the lower operating costs as indicated in the Cash Flow Statement and Profit & Loss Statement of the Supplier Cost Side. 
 ### b. Historic Protocol Data
 - [Symbiotic Dune Rewards v1](https://dune.com/symbiotic/symbiotic-rewards)
 - [Symbiotic Dune v2 Core Stats](https://dune.com/symbiotic/symbiotic-core-stats)
  *Next to the Rewards v1 Dune Dashboard data I have also considered the v2 Core Stats Data, as they give Insights on Protocol Revenue Drivers 
 
-## Historic Data Computations
+## 2. Historic Data Computations
 
 | Metric                                    | Definition                                                                                                                                                                                                                           |
 | ----------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
